--- a/frontend/styles/contas.css
+++ b/frontend/styles/contas.css
@@ -10,7 +10,9 @@
 }
 
 html{
-    background-color: #E3EAF2;
+    background-color: #E3EAF2; /* Cor de fundo consistente */
+    width: 100%;
+    height: 100%;
 }
 
 main{
@@ -19,31 +21,37 @@ main{
     background-color: #E3EAF2;
 }
 
-/* Estilo da sidebar */
 .side-bar {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     background-color: white;
-    border-radius: 49px;
-    width: 8vw; /* Fixar a largura */
+    border-radius: 50px;
+    width: 7vw;
     height: 95vh;
     padding: 15px;
-    margin-left: 1vw; /* Margem consistente */
+    margin-left: 1vw;
     margin-top: 3vh;
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.192);
-    position: fixed; /* Fixar a posição da sidebar */
-    top: 0;
+    position: fixed;
+    top: -10px;
     left: 0;
+    row-gap: 0.1vh; /* Ajuste aqui o valor para o espaço entre os ícones */
 }
 
-
-/* Estilo dos ícones (botões) */
 .side-bar img {
-    width: 4vw;
+    width: 3.3vw;
     cursor: pointer;
-    transition: transform 0.2s; /* Transição suave */
+    transition: transform 0.2s;
+    margin-bottom: 0; /* Remova a margem inferior, se necessário */
+}
+
+.mais-icone img {
+    width: 70px; /* Ajuste a largura conforme necessário */
+    height: auto; /* Mantém a proporção */
+    cursor: pointer; /* Muda o cursor para indicar que é clicável */
+    top: -15px;
 }
 
 /* Adiciona um efeito de hover */
@@ -84,11 +92,12 @@ main{
     flex-shrink: 0;
     color: #000; 
     font-family: 'Montserrat', sans-serif; 
-    font-size: 46px; 
+    font-size: 35px; 
     font-style: normal; 
     font-weight: 600; 
     line-height: normal;
     margin-left: 2vw;
+
 }
 
 #nomeUsuarioDisplay {
@@ -199,8 +208,4 @@ main{
     font-weight: 500;
     color: #349308e5;
 }
-
-
-
-
 
