--- a/frontend/styles/metas.css
+++ b/frontend/styles/metas.css
@@ -110,25 +110,49 @@ main {
 }
 
 .filtro span{
-    font-size: 1.4rem;
     font-weight: 500;
+    color: #414141;
+    font-size: 1.7rem;
+    display: flex;
 }
 
 .filtro-data{
+    font-size: 1.3rem;
     padding: 8px 15px;
+    width: 11vw;
     border-radius: 10px;
     background-color: #f7fbff;
+    border: 1px solid #100DAB; /* Borda cinza */
+    border-radius: 33px; /* Bordas arredondadas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .filtro button{
     padding: 8px 15px;
     width: 7vw;
     border-radius: 10px;
-    background-color: #E3EAF2;
     border: 1px solid #0d12ad70;
     border-radius: 33px;
     box-shadow: 0 4px 3px -2px #0d12ad70;
+    font-size: 1.3rem;
     font-weight: 500;
+    background-color: #dae8f7;
+    border: 1px solid #100DAB; /* Borda cinza */
+    border-radius: 60px; /* Bordas arredondadas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.botao-adicionar{
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 8px 15px;
+    text-align: center;
+    background-color: #100DAB;
+    color: white;
+    width: 130px;
+    border-radius: 33px;
+    cursor: pointer;
+    margin-left: 3vw;
 }
 
 .metas{
@@ -143,7 +167,7 @@ main {
     margin-left: 2vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     row-gap: 2vh;
     background-color: #dae8f7;
     border: 1px solid #0d12ad70;
@@ -152,17 +176,37 @@ main {
 }
 
 .item-lista{
-    width: 40vw;
-    padding: 2px 10px;
-    padding-right: 50px;
+    width: 50vw;
+    padding: 10px;
+    margin-left: 2vw;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    border: 3px solid #0d12adfd;
-    border-radius: 45px;
     font-size: 1.563rem;
     font-weight: 500;
     cursor: pointer;
+}
+
+.nome-icone-meta{
+    display: flex;
+    column-gap: 1vw;
+    font-weight: 600;
+    margin-left: 2vw;
+}
+
+.nome-meta{
+    font-size: 1.8rem;
+}
+
+.valor-adicionado-acumulado{
+    font-size: 1.1rem;
+}
+
+.gambiarra{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .item-lista:first-child{
@@ -173,24 +217,23 @@ main {
     margin-bottom: 3vh;
 }
 
-.nome-meta span{
-    color: #0d13ad;
-}
-
 .valor-meta{
     color: #349308e5;
+    font-weight: 600;
+    font-weight: 2rem;
+    margin-right: 5vw;
 }
+
+.barra-divisora{
+    background-color: #535353;
+    width: 90vw;
+    height: 0.1vh;
+    margin-top: 1vh;
+}
+
 ::-webkit-scrollbar {
     width: 12px; /* Largura da barra vertical */
     height: 12px; /* Altura da barra horizontal */
-}
-
-.botao-adicionar{
-    width: 4vw;
-    cursor: pointer;
-    position: absolute;
-    bottom: 10vh;
-    left: 62vw;
 }
 
 .valores{
@@ -223,13 +266,171 @@ main {
 }
 
 .receita-header, .expectativa-header{
-    color:#0d13ad; ;
+    color:#0d13ad;
+    font-weight: 600;
 }
 
 .receita-valor, .expectativa-valor{
     color: #349308e5;
+    font-weight: 600;
 }
 
 .receitas, .expectativa img{
     width: 4vw;
+}
+
+/*CSS do modal de transações*/
+
+.modal-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal-body label{
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.modal-body input{
+    cursor: pointer;
+    text-align: center;
+    font-size: 1.3rem;
+    padding: 5px 15px;
+    border: 1px solid #0d12ad70;
+    box-shadow: 0 4px 3px -2px #0d12ad70;
+    border-radius: 20px;
+}
+
+.escolha-tipo-transacoes{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 20vw;
+}
+
+.label-receita, .label-despesa{
+    font-size: 1.5rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.label-receita input, .label-despesa input{
+    cursor: pointer;
+    text-align: center;
+}
+
+.dados-transacoes{
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-top: 2vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dados-transacoes label{
+    margin-top: 2vh;
+}
+
+.valor-transacao{
+    font-size: 1.3rem;
+    padding: 5px 15px;
+    border: 1px solid #0d12ad70;
+    box-shadow: 0 4px 3px -2px #0d12ad70;
+    border-radius: 20px;
+}
+
+.valor-transacao:focus{
+    outline: none;
+}
+
+.dados-transacoes input{
+    margin-top: 1vh;
+    cursor: pointer;
+}
+
+.categoria-opcao input, .categoria-opcao label{
+    cursor: pointer;
+}
+
+.grid-categorias-despesa label, .grid-categorias-receita label{
+    margin-top: 0;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.grid-categorias-despesa, .grid-categorias-receita{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5vw;
+    /*background-color: rgba(127, 255, 212, 0.432);*/
+  }
+
+.grid-conta-selecao{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5vw;
+  }
+
+.grid-conta-selecao label{
+    margin-top: 0;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+
+  .conta-opcao input, .conta-opcao label{
+    cursor: pointer;
+  }
+
+.adicionar-categoria{
+    margin-top: 1.5vh;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+  }
+
+#nova-categoria{
+    font-size: 1.3rem;
+    padding: 5px 15px;
+    border: 1px solid #0d12ad70;
+    box-shadow: 0 4px 3px -2px #0d12ad70;
+    border-radius: 20px;
+  }
+
+#nova-categoria:focus{
+    outline: none;
+}
+
+#btn-add-categoria{
+    margin-top: 1vh;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 7px;
+    border-radius: 15px;
+    color: white;
+    background-color: #100DAB;
+}
+
+.data-transacao{
+    font-size: 1.3rem;
+    padding: 5px 15px;
+    border: 1px solid #0d12ad70;
+    box-shadow: 0 4px 3px -2px #0d12ad70;
+    border-radius: 20px;
+}
+
+.data-transacao:focus{
+    outline: none;
+}
+
+.adicionar-transacao{
+    margin-top: 3vh;
+    width: 10vw;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 7px;
+    border-radius: 15px;
+    color: white;
+    background-color: #100DAB;
 }
