--- a/frontend/styles/contas.css
+++ b/frontend/styles/contas.css
@@ -115,6 +115,7 @@ main{
     justify-content: space-between;
     align-items: center;
     width: 20vw;
+    height: 5vw;
     padding: 10px 20px;
     background-color: #dae8f7;
     border: 1px solid #0d12ad70;
@@ -130,34 +131,69 @@ main{
     width: 2vw;
 }
 
-.saldo-total{
+.saldo-total {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     width: 25vw;
-    padding: 10px 15px;
+    height: 5vw;
+    padding: 1px 15px;
     background-color: #dae8f7;
     border: 1px solid #0d12ad70;
     border-radius: 30px;
     box-shadow: 0 4px 3px -2px #0d12ad70;
     font-size: 1.4rem;
-    font-weight: 600;
+    font-weight: 500;
     color: #0d13ad;
 }
 
-.saldo{
-    color: #349308e5;
+.saldo-total-header {
+    display: flex;
+    justify-content: flex-start; /* Alinha o ícone e o texto à esquerda */
+    align-items: center;
+    width: 100%; /* Faz o header ocupar a largura total */
 }
+
+.saldo-total-header img {
+    width: 3.5vw; /* Ajusta o tamanho do ícone */
+    margin-right: 1px; /* Espaçamento entre ícone e texto */
+    margin-left: 11.5vw; /* Ajusta o alinhamento horizontal do ícone */
+    margin-top: 0.5vw; /* Espaçamento acima do ícone */
+}
+
+.saldo-total-header h1 {
+    font-size: 1.4rem;
+    margin: 0;
+    margin-top: -2vw; /* Alinha o texto mais para cima */
+    font-weight: 600;
+
+}
+
+.saldo-valor {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #349308e5;
+    margin-top: -25px;
+}
+
+
+.adicionar-conta:hover {
+    transform: scale(1.1); /* Aumenta o tamanho ao passar o mouse */
+}
+
 
 .cards{
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 2vh;
+    padding-bottom: 5vh;
+    gap: 18px; /* Espaçamento entre os cards */
+    justify-content: flex-start;
 }
 
 .conta{
     margin-left: 2vw;
-    margin-top: -1vw;
+    margin-top: -vw;
     width: 18vw;
     padding: 15px;
     display: flex;
@@ -169,6 +205,7 @@ main{
     border-radius: 30px;
     box-shadow: 0 4px 3px -2px #0d12ad70;
     cursor: pointer;
+    max-width: calc(33.33% - 15px); /* Largura máxima 1/3 da linha */
 }
 
 .icone-3-pontos {
