--- a/frontend/styles/historico-transacoes.css
+++ b/frontend/styles/historico-transacoes.css
@@ -11,6 +11,8 @@
 
 html {
     background-color: #E3EAF2; /* Cor de fundo consistente */
+    width: 100%;
+    height: 100%;
 }
 
 main {
@@ -67,17 +69,23 @@ main {
 }
 
 header{
+    width: calc(100vw - 10vw); /* Ajustar largura para compensar a sidebar */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90vw;
+    margin-top: -1.45vw;
 }
 
 header h1{
+    width: 280px;
+    height: 27px;
     flex-shrink: 0;
-    color: #000;
-    font-size: 2.188rem;
-    font-weight: 600;
+    color: #000; 
+    font-family: 'Montserrat', sans-serif; 
+    font-size: 35px; 
+    font-style: normal; 
+    font-weight: 600; 
+    line-height: normal; 
     margin-left: 2vw;
 }
 
@@ -90,6 +98,10 @@ header img{
     margin-right: 5vw;
     font-size: 1.4rem;
     font-weight: 600;
+}
+
+#nomeUsuarioDisplay {
+    margin-left: 10px; /* Espaçamento entre o nome e o ícone */
 }
 
 .filtros{
