--- a/frontend/styles/cadastro.css
+++ b/frontend/styles/cadastro.css
@@ -1,38 +1,36 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-:root {
-    --font-corpo: 'Montserrat', arial;
+:root{
+    --font-corpo: 'Montserrat',arial;
 }
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: var(--font-corpo);
 }
-
-body {
+body{
     background-color: #DDEBF8;
     overflow: hidden;
 }
 
-.logo {
+.logo{
     position: relative;
     height: 50px;
     background-color: #0D13AD;
     padding: 30px;
+    
 }
-
-.logo > img {
+.logo > img{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%,-50%);
     width: 100px;
     height: auto;
+    
 }
-
 .container-cadas {
     position: relative;
     width: 100%;
@@ -46,48 +44,48 @@ body {
     background-color: #DDEBF8;
     padding: 20px;
     padding-bottom: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.img-box .main-img {
-    max-width: 100%;
-    height: auto;
+.img-box img {
+    width: 100%;
+    height: 100%;
 }
 
 .content-box {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start; 
     width: 50%;
-    height: 100%;
+    height: calc(100vh - 130px); 
+    margin-top: 20px; 
+    padding-top: 10px;
+    box-sizing: border-box;
 }
+
 
 .content-box .form-box {
     width: 50%; 
 }
 
 .content-box .form-box h2 {
-    color: #0c0f5e;
+    color:#0c0f5e;
     font-weight: 600;
     font-size: 2em;
     text-transform: uppercase;
-    padding-bottom: 5px;
+    padding-bottom: 3px; /**/
     text-align: center;
 }
-
-.line {
+.line{
     display: block;
     width: 230px;
     height: 2px;
     background-color: #0D13AD;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 14px;
 }
 
 .content-box .form-box .input-box {
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .content-box .form-box .input-box input {
@@ -134,44 +132,45 @@ body {
     background: #2329ec;
 }
 
+
 .content-box .form-box .input-box p {
     color: #32324f;
+    margin-top: 5px;
     text-align: center;
 }
-
-.content-box .form-box .input-box p a {
+.content-box .form-box .input-box p a{
     color: #2329ec;
     text-decoration: none;
 }
 
-.content-box .form-box .input-box p a:hover {
+.content-box .form-box .input-box p a:hover{
     color: #0D13AD;
     text-decoration: underline;
 }
 
-@media (max-width: 868px) {
-    .container-cadas .img-box {
+@media (max-width:868px) {
+    .container-cadas .img-box{
         display: none;
     }
-    .container-cadas .content-box {
+    .container-cadas .content-box{
         width: 100%;
     }
-    .container-cadas .content-box .form-box {
+    .container-cadas .content-box .form-box{
         width: 100%;
         padding: 40px;
         background: #DDEBF8;
         margin: 50px;
     } 
-    .container-cadas .content-box .form-box h3 {
+    .container-cadas .content-box .form-box h3{
         margin: 30px 0 10px;
     } 
 }
-
-@media (max-width: 500px) {
-    .container-cadas .content-box .form-box .remember {
+@media (max-width:500px) {
+    .container-cadas .content-box .form-box .remember{
         flex-wrap: wrap;
     }
-    .container-cadas .content-box .form-box .remember a {
+    .container-cadas .content-box .form-box .remember a{
         margin-top: 20px;
     }
+    
 }
