--- a/frontend/styles/cadastro.css
+++ b/frontend/styles/cadastro.css
@@ -42,23 +42,23 @@ body{
     width: 50%;
     height: 100%;
     background-color: #DDEBF8;
-    padding: 20px;
-    padding-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
 }
 
 .img-box img {
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    min-width: 450px;
 }
 
 .content-box {
     display: flex;
     justify-content: center;
-    align-items: flex-start; 
+    align-items: center; 
     width: 50%;
-    height: calc(100vh - 130px); 
-    margin-top: 20px; 
-    padding-top: 10px;
+    height: 100%; 
+    padding-bottom: 6rem;
     box-sizing: border-box;
 }
 
@@ -85,13 +85,13 @@ body{
 }
 
 .content-box .form-box .input-box {
-    margin-bottom: 5px;
+    margin-bottom: 1.25rem;
 }
 
 .content-box .form-box .input-box input {
     width: 100%;
     padding: 10px;
-    margin: 10px;
+    margin: 10px 10px 10px 0px;
     outline: none;
     font-weight: 400;
     border: none;
