--- a/frontend/styles/contas.css
+++ b/frontend/styles/contas.css
@@ -55,7 +55,7 @@ main{
 }
 
 /* Adiciona um efeito de hover */
-.side-bar img:hover {
+.side-bar .img-hover:hover {
     transform: scale(1.1); /* Aumenta o tamanho ao passar o mouse */
 }
 
@@ -186,12 +186,6 @@ main{
     margin-top: 1px;
 }
 
-
-.adicionar-conta:hover {
-    transform: scale(1.1); /* Aumenta o tamanho ao passar o mouse */
-}
-
-
 .cards{
     display: flex;
     flex-wrap: wrap;
@@ -213,7 +207,6 @@ main{
     border: 1px solid #0d12ad70;
     border-radius: 30px;
     box-shadow: 0 4px 3px -2px #0d12ad70;
-    cursor: pointer;
     max-width: calc(33.33% - 15px); /* Largura máxima 1/3 da linha */
 }
 
