--- a/frontend/styles/historico-transacoes.css
+++ b/frontend/styles/historico-transacoes.css
@@ -56,7 +56,7 @@ main {
 }
 
 /* Adiciona um efeito de hover */
-.side-bar img:hover {
+.side-bar .img-hover:hover {
     transform: scale(1.1); /* Aumenta o tamanho ao passar o mouse */
 }
 
