--- a/frontend/styles/application.css
+++ b/frontend/styles/application.css
@@ -21,3 +21,161 @@
 .blue-color{
     color: #0d13ad
 }
+
+.adicionar-transacao{
+    margin-top: 3vh;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 10px;
+    border-radius: 15px;
+    color: white;
+    background-color: #100DAB;
+}
+
+.escolha-tipo-transacoes label {
+    cursor: pointer;
+    display: inline-block;
+    margin: 10px;
+    text-align: center;
+}
+
+.escolha-tipo-transacoes input[type="radio"] {
+    display: none;
+}
+
+.escolha-tipo-transacoes label span {
+    font-size: 24px;
+    color: #333;
+    transition: color 0.3s ease;
+}
+
+.escolha-tipo-transacoes input[type="radio"]:checked + span {
+    color: #007bff;
+}
+
+.modal-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.escolha-tipo-transacoes{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 20vw;
+}
+
+.label-receita, .label-despesa{
+    font-size: 1.5rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.label-receita input, .label-despesa input{
+    cursor: pointer;
+    text-align: center;
+}
+
+.dados-transacoes{
+    font-size: 1.3rem;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dados-transacoes label{
+    margin-top: 2vh;
+}
+
+.valor-transacao{
+    font-size: 1.3rem;
+    padding: 5px 15px;
+    border: 1px solid #0d12ad70;
+    box-shadow: 0 4px 3px -2px #0d12ad70;
+    border-radius: 20px;
+}
+
+.valor-transacao:focus{
+    outline: none;
+}
+
+.dados-transacoes input{
+    margin-top: 1vh;
+    cursor: pointer;
+}
+
+.categoria-opcao input, .categoria-opcao label{
+    cursor: pointer;
+}
+
+.grid-categorias-despesa label, .grid-categorias-receita label{
+    margin-top: 0;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.grid-categorias-despesa, .grid-categorias-receita{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5vw;
+    /*background-color: rgba(127, 255, 212, 0.432);*/
+  }
+
+.grid-conta-selecao{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5vw;
+  }
+
+.grid-conta-selecao label{
+    margin-top: 0;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+
+  .conta-opcao input, .conta-opcao label{
+    cursor: pointer;
+  }
+
+.adicionar-categoria{
+    margin-top: 1.5vh;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+  }
+
+#nova-categoria{
+    font-size: 1.3rem;
+    padding: 5px 15px;
+    border: 1px solid #0d12ad70;
+    box-shadow: 0 4px 3px -2px #0d12ad70;
+    border-radius: 20px;
+  }
+
+#nova-categoria:focus{
+    outline: none;
+}
+
+#btn-add-categoria{
+    margin-top: 1vh;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 7px;
+    border-radius: 15px;
+    color: white;
+    background-color: #100DAB;
+}
+
+.data-transacao{
+    font-size: 1.3rem;
+    padding: 5px 15px;
+    border: 1px solid #0d12ad70;
+    box-shadow: 0 4px 3px -2px #0d12ad70;
+    border-radius: 20px;
+}
+
+.data-transacao:focus{
+    outline: none;
+}
