--- a/frontend/styles/relatorios.css
+++ b/frontend/styles/relatorios.css
@@ -160,19 +160,16 @@ main {
 }
 
 .grafico{
+    width: 60%;
     padding: 30px;
-}
-
-.grafico img{
-    width: 35vw;
-    height: 50vh;
 }
 
 .legenda{
     display: flex;
     flex-direction: column;
-    row-gap: 4vh;
-    margin-top: 10vh;
+    row-gap: 1vh;
+    margin-top: 4vh;
+    margin-right: 5vw;
 }
 
 .legenda-item{
@@ -183,8 +180,8 @@ main {
 
 .legenda-icone{
     display: inline-block;
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 1.2rem;
+    height: 1.2rem;
     border-radius: 50%;
     background-color: #100DAB;
     box-shadow: 0 3px 2px rgba(0, 0, 0, 0.412);
@@ -193,9 +190,9 @@ main {
 .legenda-texto-valor{
     display: flex;
     justify-content: space-between;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 600;
-    width: 30vw;
+    width: 20vw;
 }
 
 .legenda-valor{
