recupera nome do usuário e agora deleta a transacao

--- a/frontend/styles/historico-transacoes.css
+++ b/frontend/styles/historico-transacoes.css
@@ -277,7 +277,8 @@ tbody tr:last-child{
     border-bottom-left-radius: 33px;
     border-bottom-right-radius: 33px;
 }
-tbody tr{
+
+.fa-solid{
     cursor: pointer;
 }
 
